Added target clean_modules to delete HTML for a single module

--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.2 2002/05/07 16:24:13 joshualubell Exp $ -->
+<!-- $Id: build.xml,v 1.3 2002/05/08 16:17:36 joshualubell Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -23,6 +23,9 @@ generates HTML for everything in the module repository
 
 "ant clean" 
 deletes all generated HTML files
+
+"ant -DMODULES=data/modules/[module-name] clean_module" 
+deletes all HTML generated for a single module
 
 "ant index" 
 generates HTML for repository_index.xml
@@ -85,6 +88,12 @@ tar.gz format)
       <fileset dir="." includes="repository_index.htm*"/>
       <fileset dir="${RESOURCESDIR}" includes="**/*.htm*"/>
       <fileset dir="${MODULESDIR}" includes="**/*.htm*"/>
+    </delete>
+  </target>
+
+  <target name="clean_module" depends="init" description="delete generated files">
+    <delete>
+      <fileset dir="${MODULES}" includes="**/*.htm*"/>
     </delete>
   </target>
 
