Added output_rcs so that HTML does not have the rcs info

--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.3 2002/05/08 16:17:36 joshualubell Exp $ -->
+<!-- $Id: build.xml,v 1.4 2002/05/15 12:57:05 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -70,6 +70,8 @@ tar.gz format)
   <target name="init" description="initialize variables">
     <tstamp/>
     <property name="STYLES"  value="xsl"/>
+    <!-- YES means that the rcs info is displayed on every module -->
+    <property name="OUTPUT_RCS" value="NO"/>
     <property name="DTDDIR" value="dtd"/>
     <property name="RESOURCESDIR" value="data/resources"/>
     <property name="RESOURCES" value="${RESOURCESDIR}/**"/>
@@ -77,6 +79,7 @@ tar.gz format)
     <property name="MODULES" value="${MODULESDIR}/**"/>
     <property name="SYS" value="${MODULES}/sys"/>
     <property name="ARCHIVE" value="stepmod-html-${DSTAMP}"/>
+    <property name="ARCHIVEALL" value="stepmod-${DSTAMP}"/>
     <property name="SFTARBALL"
 	      value="http://cvs.sourceforge.net/cvstarballs/stepmod-cvsroot.tar.gz"/>
     <property name="SFCVSROOT"
@@ -133,126 +136,150 @@ tar.gz format)
       <targetfileset dir="." includes="${MODULES}/*.htm*"/>
     </dependset>
     <style includes="${MODULES}/arm.xml, ${MODULES}/mim.xml,
-	   ${MODULES}/mim_lf.xml" destdir="." extension=".htm"
-	   style="${STYLES}/express.xsl">
+                     ${MODULES}/mim_lf.xml" destdir="." extension=".htm"
+      style="${STYLES}/express.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${MODULES}/arm_descriptions.xml,
 	   ${MODULES}/mim_descriptions.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/descriptions.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${MODULES}/armexpg*.xml,
 	   ${MODULES}/mimexpg*.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/imgfile.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/1_scope.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_1_scope.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/2_refs.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_2_refs.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/3_defs.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_3_defs.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/4_info_reqs.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_4_info_reqs.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/5_mapping.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_5_mapping.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/5_mim.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_5_mim.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/a_short_names.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_a_short_names.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/b_obj_reg.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_b_obj_reg.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/biblio.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_biblio.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/c_arm_expg.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_c_arm_expg.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/cover.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_cover.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/d_mim_expg.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_d_mim_expg.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/e_exp.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_e_exp.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/e_exp_arm.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_e_exp_arm.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 <!--    <style includes="${SYS}/e_exp_arm_lf.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_e_exp_arm_lf.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>-->
     <style includes="${SYS}/e_exp_mim.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_e_exp_mim.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/e_exp_mim_lf.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_e_exp_mim_lf.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/f_guide.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_f_guide.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/foreword.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_foreword.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/introduction.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_introduction.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     <style includes="${SYS}/main.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_main.xsl">
       <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
   </target>
 
@@ -278,6 +305,12 @@ stepmod/data/**, stepmod/help/**, stepmod/images/**"
          includes="stepmod/repository_index.htm, stepmod/css/**,
 stepmod/data/**, stepmod/help/**, stepmod/images/**"
          excludes="**/*.xml"
+    />
+  </target>
+
+  <target name="zipall" depends="all" description="create .zip file">
+    <zip zipfile="../${ARCHIVEALL}.zip" basedir=".."
+      includes="stepmod/**"
     />
   </target>
 
