Removed build of main.xml as main is not used.

--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.4 2002/05/15 12:57:05 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.5 2002/05/30 14:09:34 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -275,12 +275,14 @@ tar.gz format)
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+    <!-- not used yet
     <style includes="${SYS}/main.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_main.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+    -->
   </target>
 
 
