Added ballot to build

--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.5 2002/05/30 14:09:34 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.6 2002/06/05 12:53:20 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -155,6 +155,12 @@ tar.gz format)
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+    <style includes="${SYS}/contents.xml" destdir="."
+	   extension=".htm"
+	   style="${STYLES}/sect_contents.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
     <style includes="${SYS}/1_scope.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_1_scope.xsl">
@@ -176,6 +182,12 @@ tar.gz format)
     <style includes="${SYS}/4_info_reqs.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_4_info_reqs.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+    <style includes="${SYS}/5_main.xml" destdir="."
+	   extension=".htm"
+	   style="${STYLES}/sect_5_main.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
@@ -305,8 +317,8 @@ stepmod/data/**, stepmod/help/**, stepmod/images/**"
   <target name="zip" depends="all" description="create .zip file">
     <zip zipfile="../${ARCHIVE}.zip" basedir=".."
          includes="stepmod/repository_index.htm, stepmod/css/**,
-stepmod/data/**, stepmod/help/**, stepmod/images/**"
-         excludes="**/*.xml"
+stepmod/data/**, stepmod/help/**, stepmod/images/**, stepmod/ballots/**"
+      excludes="**/*.xml, **/*.zip"
     />
   </target>
 
