--- a/ballots/ballots/pdm_ballot_072002/build.xml
+++ b/ballots/ballots/pdm_ballot_072002/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.2 2002/06/20 17:09:41 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.3 2002/07/10 07:03:22 robbod Exp $ -->
 <!-- ================================================= -->
 <!-- build.xml for the ballot packages of              -->
 <!-- STEP modules repository                           -->
@@ -100,7 +100,7 @@ Usage:
                 stepmod/ballots/index.htm,
                 stepmod/repository_index.htm, stepmod/css/**,
                 stepmod/data/resources/**, 
-                stepmod/data/modules/constructive_solid_geometry_2d/**,
+ <!--               stepmod/data/modules/constructive_solid_geometry_2d/**,	-->
                 stepmod/data/modules/elemental_geometric_shape/**,
                 stepmod/data/modules/elemental_topology/**,
                 stepmod/data/modules/foundation_representation/**,
@@ -120,26 +120,30 @@ Usage:
                 stepmod/data/modules/product_view_definition/**,
                 stepmod/data/modules/project/**,
                 stepmod/data/modules/security_classification/**,
-                stepmod/data/modules/assembly_component_characterization/**,
+					<!--																					-->
                 stepmod/data/modules/assembly_structure/**,
                 stepmod/data/modules/certification/**,
+                stepmod/data/modules/contextual_shape_positioning/**,
                 stepmod/data/modules/part_definition_relationship/**,
                 stepmod/data/modules/product_relationship/**,
                 stepmod/data/modules/product_replacement/**,
                 stepmod/data/modules/product_version_relationship/**,
                 stepmod/data/modules/product_view_definition_relationship/**,
-                stepmod/data/modules/activity/**,
+ 					<!--																					-->
+               stepmod/data/modules/activity/**,
                 stepmod/data/modules/activity_method/**,
                 stepmod/data/modules/work_order/**,
                 stepmod/data/modules/work_request/**,
-                stepmod/data/modules/configuration_effectivity/**,
+ 					<!--																					-->
+               stepmod/data/modules/configuration_effectivity/**,
                 stepmod/data/modules/configuration_item/**,
                 stepmod/data/modules/effectivity/**,
                 stepmod/data/modules/effectivity_application/**,
                 stepmod/data/modules/event/**,
                 stepmod/data/modules/product_concept_identification/**,
                 stepmod/data/modules/time_interval/**,
-                stepmod/data/modules/document_and_version_identification/**,
+ 					<!--																					-->
+               stepmod/data/modules/document_and_version_identification/**,
                 stepmod/data/modules/document_assignment/**,
                 stepmod/data/modules/document_definition/**,
                 stepmod/data/modules/document_structure/**,
@@ -147,6 +151,8 @@ Usage:
                 stepmod/data/modules/file_identification/**,
                 stepmod/data/modules/pdm_document_properties/**,
                 stepmod/data/modules/pdm_file_properties/**,
+                stepmod/data/modules/document_properties/**,
+					<!--																					-->
                 stepmod/data/modules/geometric_validation_property_representation/**,
                 stepmod/data/modules/independent_property/**,
                 stepmod/data/modules/independent_property_representation/**,
@@ -155,10 +161,12 @@ Usage:
                 stepmod/data/modules/property_assignment/**,
                 stepmod/data/modules/shape_property_assignment/**,
                 stepmod/data/modules/value_with_unit/**,
+					<!--																					-->
                 stepmod/data/modules/advanced_boundary_representation/**,
                 stepmod/data/modules/constructive_solid_geometry/**,
                 stepmod/data/modules/constructive_solid_geometry_3d/**,
                 stepmod/data/modules/edge_based_wireframe/**,
+                stepmod/data/modules/external_model/**,
                 stepmod/data/modules/faceted_boundary_representation/**,
                 stepmod/data/modules/geometrically_bounded_surface/**,
                 stepmod/data/modules/geometrically_bounded_wireframe/**,
