--- a/ballots/ballots/pdm_ballot_072002/build.xml
+++ b/ballots/ballots/pdm_ballot_072002/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.2 2002/06/20 17:09:41 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.5 2002/07/10 10:37:49 robbod Exp $ -->
 <!-- ================================================= -->
 <!-- build.xml for the ballot packages of              -->
 <!-- STEP modules repository                           -->
@@ -61,7 +61,7 @@ Usage:
     <dependset>
       <srcfileset dir="${DTDDIR}" includes="**/*.dtd, **/*.ent"/>
       <srcfileset dir="${BALLLOTSTYLES}" includes="**/*.xsl"/>
-      <srcfileset dir="${STEPMODSTYLES}" includes="**/*.xsl"/>
+      <srcfileset dir="${BALLOTDIR}" includes="**/*.xml"/>
       <targetfileset dir="." includes="${BALLOTDIR}/*.htm*"/>
     </dependset>
 
