removed the long form

--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.6 2002/06/05 12:53:20 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.7 2002/07/09 12:30:01 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -135,8 +135,8 @@ tar.gz format)
       <srcfileset dir="${STYLES}" includes="**/*.xsl"/>
       <targetfileset dir="." includes="${MODULES}/*.htm*"/>
     </dependset>
-    <style includes="${MODULES}/arm.xml, ${MODULES}/mim.xml,
-                     ${MODULES}/mim_lf.xml" destdir="." extension=".htm"
+    <style includes="${MODULES}/arm.xml, ${MODULES}/mim.xml" 
+      destdir="." extension=".htm"
       style="${STYLES}/express.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
