--- a/ballots/ballots/pdm_ballot_072002/build.xml
+++ b/ballots/ballots/pdm_ballot_072002/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.8 2002/07/29 15:08:01 joshualubell Exp $ -->
+<!-- $Id: build.xml,v 1.9 2002/07/31 14:08:23 robbod Exp $ -->
 <!-- ================================================= -->
 <!-- build.xml for the ballot packages of              -->
 <!-- STEP modules repository                           -->
@@ -30,7 +30,7 @@ Usage:
 
 <project name="ballothtml" basedir="../../..">
 
-  <target name="init" description="initialize variables">
+  <target name="variables" description="initialize variables">
     <tstamp/>
     <property name="BALLLOTSTYLES" value="ballots/xsl"/>
     <property name="OUTPUT_RCS" value="NO"/>
@@ -1970,22 +1970,24 @@ data/modules/topologically_bounded_surface/mim.xml"/>
              data/resources/support_resource_schema/support_resource_schema.xml,
              data/resources/topology_schema/topology_schema.xml
              "/>
+  </target>
 
+  <target name="init" depends="variables">
     <mkdir dir="${ISODIR}"/>
     <copy todir="${ISODIR}/images" >
       <fileset dir="images"/>
     </copy>
-
   </target>
 
 
 
 
-  <target name="all" depends="init, isoindex, isomodules" 
+  <target name="all" depends="init, resources, isoindex, isomodules" 
     description="Create HTML for everything"/>
 
 
-  <target name="clean" depends="init" description="delete generated files">
+  <target name="clean" depends="variables" 
+    description="delete generated files">
     <delete dir="${ISODIR}"/>
   </target>
 
