--- a/ballots/ballots/pdm_ballot_072002/build.xml
+++ b/ballots/ballots/pdm_ballot_072002/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.10 2002/07/31 15:17:10 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.11 2002/08/04 08:07:30 robbod Exp $ -->
 <!-- ================================================= -->
 <!-- build.xml for the ballot packages of              -->
 <!-- STEP modules repository                           -->
@@ -2003,6 +2003,13 @@ data/modules/topologically_bounded_surface/mim.xml"/>
 
     <property name="RESOURCESXML" 
       value="
+             data/resources/aic_advanced_brep/aic_advanced_brep.xml,
+             data/resources/aic_edge_based_wireframe/aic_edge_based_wireframe,
+             data/resources/aic_faceted_brep/aic_faceted_brep.xml,
+             data/resources/aic_geometrically_bounded_surface/aic_geometrically_bounded_surface.xml,
+             data/resources/aic_manifold_surface/aic_manifold_surface.xml,
+             data/resources/aic_shell_based_wireframe/aic_shell_based_wireframe.xml,
+             data/resources/aic_topologically_bounded_surface/aic_topologically_bounded_surface.xml
              data/resources/action_schema/action_schema.xml,
              data/resources/application_context_schema/application_context_schema.xml,
              data/resources/approval_schema/approval_schema.xml,
@@ -2323,6 +2330,7 @@ data/modules/topologically_bounded_surface/mim.xml"/>
       <param name="menubar_file" expression="${ISOMENU}"/>
     </style>
 
+    <!--
     <style includes="${ARMDESCRIPTIONSXML},
 	   ${MIMDESCRIPTIONSXML}" destdir="${ISODIR}"
 	   extension=".htm"
@@ -2331,6 +2339,7 @@ data/modules/topologically_bounded_surface/mim.xml"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
       <param name="menubar_file" expression="${ISOMENU}"/>
     </style>
+    -->
 
     <style includes="${ARMEXPGXML},
 	   ${MIMEXPGXML}" destdir="${ISODIR}"
