Now copying JPEGS

--- a/ballots/ballots/pdm_ballot_072002/build.xml
+++ b/ballots/ballots/pdm_ballot_072002/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.11 2002/08/04 08:07:30 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.12 2002/08/06 12:46:56 robbod Exp $ -->
 <!-- ================================================= -->
 <!-- build.xml for the ballot packages of              -->
 <!-- STEP modules repository                           -->
@@ -175,7 +175,70 @@ data/modules/geometrically_bounded_wireframe/*.gif,
 data/modules/manifold_surface/*.gif,
 data/modules/shell_based_wireframe/*.gif,
 data/modules/constructive_solid_geometry_3d/*.gif,
-data/modules/topologically_bounded_surface/*.gif"/>
+data/modules/topologically_bounded_surface/*.gif,
+data/modules/elemental_geometric_shape/*.jpg,
+data/modules/foundation_representation/*.jpg,
+data/modules/alias_identification/*.jpg,
+data/modules/approval/*.jpg,
+data/modules/contract/*.jpg,
+data/modules/date_time/*.jpg,
+data/modules/date_time_assignment/*.jpg,
+data/modules/identification_assignment/*.jpg,
+data/modules/part_and_version_identification/*.jpg,
+data/modules/part_view_definition/*.jpg,
+data/modules/person_organization/*.jpg,
+data/modules/person_organization_assignment/*.jpg,
+data/modules/product_categorization/*.jpg,
+data/modules/product_identification/*.jpg,
+data/modules/product_version/*.jpg,
+data/modules/product_view_definition/*.jpg,
+data/modules/project/*.jpg,
+data/modules/security_classification/*.jpg,
+data/modules/assembly_structure/*.jpg,
+data/modules/certification/*.jpg,
+data/modules/contextual_shape_positioning/*.jpg,
+data/modules/part_definition_relationship/*.jpg,
+data/modules/product_relationship/*.jpg,
+data/modules/product_replacement/*.jpg,
+data/modules/product_version_relationship/*.jpg,
+data/modules/product_view_definition_relationship/*.jpg,
+data/modules/activity/*.jpg,
+data/modules/activity_method/*.jpg,
+data/modules/work_order/*.jpg,
+data/modules/work_request/*.jpg,
+data/modules/configuration_effectivity/*.jpg,
+data/modules/configuration_item/*.jpg,
+data/modules/effectivity/*.jpg,
+data/modules/effectivity_application/*.jpg,
+data/modules/event/*.jpg,
+data/modules/product_concept_identification/*.jpg,
+data/modules/time_interval/*.jpg,
+data/modules/document_and_version_identification/*.jpg,
+data/modules/document_assignment/*.jpg,
+data/modules/document_definition/*.jpg,
+data/modules/document_structure/*.jpg,
+data/modules/external_item_identification_assignment/*.jpg,
+data/modules/file_identification/*.jpg,
+data/modules/document_properties/*.jpg,
+data/modules/independent_property/*.jpg,
+data/modules/independent_property_representation/*.jpg,
+data/modules/measure_representation/*.jpg,
+data/modules/process_property_assignment/*.jpg,
+data/modules/product_view_definition_properties/*.jpg,
+data/modules/property_assignment/*.jpg,
+data/modules/shape_property_assignment/*.jpg,
+data/modules/value_with_unit/*.jpg,
+data/modules/advanced_boundary_representation/*.jpg,
+data/modules/edge_based_wireframe/*.jpg,
+data/modules/external_model/*.jpg,
+data/modules/faceted_boundary_representation/*.jpg,
+data/modules/geometric_validation_property_representation/*.jpg,
+data/modules/geometrically_bounded_surface/*.jpg,
+data/modules/geometrically_bounded_wireframe/*.jpg,
+data/modules/manifold_surface/*.jpg,
+data/modules/shell_based_wireframe/*.jpg,
+data/modules/constructive_solid_geometry_3d/*.jpg,
+data/modules/topologically_bounded_surface/*.jpg"/>
 
     <property name="CONTENTSXML" value="
 data/modules/elemental_geometric_shape/sys/contents.xml,
