--- a/ballots/ballots/pdm_ballot_072002/build.xml
+++ b/ballots/ballots/pdm_ballot_072002/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.12 2002/08/06 12:46:56 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.13 2002/08/06 16:34:16 robbod Exp $ -->
 <!-- ================================================= -->
 <!-- build.xml for the ballot packages of              -->
 <!-- STEP modules repository                           -->
@@ -2070,6 +2070,7 @@ data/modules/topologically_bounded_surface/mim.xml"/>
              data/resources/aic_edge_based_wireframe/aic_edge_based_wireframe,
              data/resources/aic_faceted_brep/aic_faceted_brep.xml,
              data/resources/aic_geometrically_bounded_surface/aic_geometrically_bounded_surface.xml,
+             data/resources/aic_geometrically_bounded_wireframe/aic_geometrically_bounded_wireframe,
              data/resources/aic_manifold_surface/aic_manifold_surface.xml,
              data/resources/aic_shell_based_wireframe/aic_shell_based_wireframe.xml,
              data/resources/aic_topologically_bounded_surface/aic_topologically_bounded_surface.xml
