--- a/ballots/ballots/pdm_ballot_072002/build.xml
+++ b/ballots/ballots/pdm_ballot_072002/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.14 2002/08/06 17:11:27 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.15 2002/08/06 17:20:45 robbod Exp $ -->
 <!-- ================================================= -->
 <!-- build.xml for the ballot packages of              -->
 <!-- STEP modules repository                           -->
@@ -2067,7 +2067,7 @@ data/modules/topologically_bounded_surface/mim.xml"/>
     <property name="RESOURCESXML" 
       value="
              data/resources/aic_advanced_brep/aic_advanced_brep.xml,
-             data/resources/aic_edge_based_wireframe/aic_edge_based_wireframe,
+             data/resources/aic_edge_based_wireframe/aic_edge_based_wireframe.xml,
              data/resources/aic_faceted_brep/aic_faceted_brep.xml,
              data/resources/aic_geometrically_bounded_surface/aic_geometrically_bounded_surface.xml,
              data/resources/aic_geometrically_bounded_wireframe/aic_geometrically_bounded_wireframe.xml,
