--- a/ballots/ballots/pdm_ballot_072002/build.xml
+++ b/ballots/ballots/pdm_ballot_072002/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.15 2002/08/06 17:20:45 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.16 2002/08/06 17:24:50 robbod Exp $ -->
 <!-- ================================================= -->
 <!-- build.xml for the ballot packages of              -->
 <!-- STEP modules repository                           -->
@@ -2211,9 +2211,9 @@ data/modules/topologically_bounded_surface/mim.xml"/>
     <dependset>
       <srcfileset dir="${STEPMODDTDDIR}" includes="**/*.dtd, **/*.ent"/>
       <srcfileset dir="${STEPMODSTYLES}" includes="**/*.xsl"/>
-      <srcfileset dir="." includes="$(MODULES}"/>
-      <srcfileset dir="." includes="$(GIFS}"/>
-      <srcfileset dir="." includes="$(EXPRESS}"/>
+      <srcfileset dir="." includes="${MODULES}"/>
+      <srcfileset dir="." includes="${GIFS}"/>
+      <srcfileset dir="." includes="${EXPRESS}"/>
       <targetfileset dir="${ISODIR}" includes="/data/modules/**/*.htm"/>
     </dependset>
 
@@ -2386,6 +2386,7 @@ data/modules/topologically_bounded_surface/mim.xml"/>
       <param name="menubar_file" expression="${ISOMENU}"/>
     </style>
 
+    <!--
     <style includes="${ARMEXPXML}, ${MIMEXPXML}" 
       destdir="${ISODIR}" extension=".htm"
       style="${STEPMODSTYLES}/express.xsl">
@@ -2393,7 +2394,7 @@ data/modules/topologically_bounded_surface/mim.xml"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
       <param name="menubar_file" expression="${ISOMENU}"/>
     </style>
-
+    -->
     <!--
     <style includes="${ARMDESCRIPTIONSXML},
 	   ${MIMDESCRIPTIONSXML}" destdir="${ISODIR}"
