--- a/ballots/ballots/pdm_ballot_072002/build.xml
+++ b/ballots/ballots/pdm_ballot_072002/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.17 2002/08/09 14:26:24 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.18 2002/08/09 15:27:39 robbod Exp $ -->
 <!-- ================================================= -->
 <!-- build.xml for the ballot packages of              -->
 <!-- STEP modules repository                           -->
@@ -28,7 +28,7 @@ Usage:
 -->
 
 
-<project name="ballothtml" basedir="../../..">
+<project name="ballothtml" default="zip" basedir="../../..">
 
   <target name="variables" description="initialize variables">
     <tstamp/>
